lazy loading for pictures added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <nav class="bg-white border-gray-200 dark:border-gray-600 dark:bg-gray-900">
   <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4">
     <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="assets/logos/dna-trails-logo-black.png" alt="DNA Trails Logo" class="h-8 w-auto">
+      <img src="assets/logos/dna-trails-logo-black.png" alt="DNA Trails Logo" class="h-8 w-auto" loading="lazy">
     </a>
     <button data-collapse-toggle="mega-menu-full" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mega-menu-full" aria-expanded="false">
       <span class="sr-only">Open main menu</span>
@@ -149,8 +149,8 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 </p>
         </div>
         <div class="grid grid-cols-2 gap-4 mt-8">
-            <img class="w-full rounded-lg" src="assets/img/PXL_20241109_090337105.jpg" alt="a group of trail runners in innsbruck area">
-            <img class="mt-4 w-full lg:mt-10 rounded-lg" src="assets/img/PXL_20230830_091554949.jpg" alt="people trail running in innsbruck">
+            <img class="w-full rounded-lg" src="assets/img/PXL_20241109_090337105.jpg" alt="a group of trail runners in innsbruck area" loading="lazy">
+            <img class="mt-4 w-full lg:mt-10 rounded-lg" src="assets/img/PXL_20230830_091554949.jpg" alt="people trail running in innsbruck" loading="lazy">
         </div>
     </div>
 </section>
@@ -158,8 +158,8 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 <section class="bg-white dark:bg-gray-900">
     <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
         
-        <div class="grid grid-cols-2 gap-4 mt-8 lg:mt-0"> <img class="w-full rounded-lg" src="assets/img/IMG_4709.jpg" alt="a group of trail runners having fun">
-            <img class="mt-4 w-full lg:mt-10 rounded-lg" src="assets/img/PXL_20250424_161841190.MP.jpg" alt="a group of trail runners in innsbruck area, near bierstindl">
+        <div class="grid grid-cols-2 gap-4 mt-8 lg:mt-0"> <img class="w-full rounded-lg" src="assets/img/IMG_4709.jpg" alt="a group of trail runners having fun" loading="lazy">
+            <img class="mt-4 w-full lg:mt-10 rounded-lg" src="assets/img/PXL_20250424_161841190.MP.jpg" alt="a group of trail runners in innsbruck area, near bierstindl" loading="lazy">
         </div>
 
         <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
@@ -214,7 +214,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
       <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
           <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
               <a href="#">
-                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="assets/img/allard-sym-square.jpg" alt="Allard Sym Avatar">
+                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="assets/img/allard-sym-square.jpg" alt="Allard Sym Avatar" loading="lazy">
               </a>
               <div class="p-5">
                   <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -248,7 +248,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
           </div> 
           <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
               <a href="#">
-                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src=assets/img/bente-square.jpg alt="Bente Avatar">
+                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src=assets/img/bente-square.jpg alt="Bente Avatar" loading="lazy">
               </a>
               <div class="p-5">
                   <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -287,7 +287,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
           </div> 
           <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
               <a href="#">
-                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="assets/img/andi-square.png" alt="Andi Avatar">
+                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="assets/img/andi-square.png" alt="Andi Avatar" loading="lazy">
               </a>
               <div class="p-5">
                   <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -357,46 +357,46 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
     <div class="grid gap-4">
         <div>
 
-             <img class="h-auto max-w-full rounded-lg" src="assets/img/IMG_6264.jpg" alt="Trail runners in winter in the snow">
+             <img class="h-auto max-w-full rounded-lg" src="assets/img/IMG_6264.jpg" alt="Trail runners in winter in the snow" loading="lazy">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20250327_175117059.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20250327_175117059.jpg" alt="" loading="lazy">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/imgesprach.jpg" alt="Runners connecting with each other and laughing">
-        </div>
-    </div>
-    <div class="grid gap-4">
-        <div>
-         <img class="h-auto max-w-full rounded-lg" src="assets/img/Schuhprobe.jpg" alt="Runners testing shoes">
-        </div>
-        <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/DachterassenView.jpg" alt="Runners having a drink on a rooftop after a run">
-        </div>
-        <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20241109_082750871.MP.jpg" alt="Group picture of runners">
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/imgesprach.jpg" alt="Runners connecting with each other and laughing" loading="lazy">
         </div>
     </div>
     <div class="grid gap-4">
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/IMG_5066.jpg" alt="Runners standing in circle">
+         <img class="h-auto max-w-full rounded-lg" src="assets/img/Schuhprobe.jpg" alt="Runners testing shoes" loading="lazy">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/IATF.jpg" alt="IATF innsbruck Alpine Trailrun Festival">
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/DachterassenView.jpg" alt="Runners having a drink on a rooftop after a run" loading="lazy">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20230727_163128250.jpg" alt="Runners easy pace">
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20241109_082750871.MP.jpg" alt="Group picture of runners" loading="lazy">
         </div>
     </div>
     <div class="grid gap-4">
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20240502_164953641.jpg" alt="runners meeting up for a run">
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/IMG_5066.jpg" alt="Runners standing in circle" loading="lazy">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/20231109_180711.jpg" alt="Runners meeting in winter time after dark">
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/IATF.jpg" alt="IATF innsbruck Alpine Trailrun Festival" loading="lazy">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20230928_165307165.MP.jpg" alt="Beginner trail runners">
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20230727_163128250.jpg" alt="Runners easy pace" loading="lazy">
+        </div>
+    </div>
+    <div class="grid gap-4">
+        <div>
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20240502_164953641.jpg" alt="runners meeting up for a run" loading="lazy">
+        </div>
+        <div>
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/20231109_180711.jpg" alt="Runners meeting in winter time after dark" loading="lazy">
+        </div>
+        <div>
+            <img class="h-auto max-w-full rounded-lg" src="assets/img/PXL_20230928_165307165.MP.jpg" alt="Beginner trail runners" loading="lazy">
         </div>
     </div>
 </div>
@@ -499,7 +499,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
 <a href="https://www.instagram.com/dna.trails/" class="flex items-center">
-  <img src="assets/logos/dna-trails-logo-black.png" alt="DNA Trails Logo" class="h-8 me-2">
+  <img src="assets/logos/dna-trails-logo-black.png" alt="DNA Trails Logo" class="h-8 me-2" loading="lazy">
   <span class="text-2xl tracking-tight font-extrabold text-gray-900 dark:text-white leading-tight mt-0.5">DNA Trails</span>
 </a>
 
