Add fallback favicon.ico for better browser and Google support

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
      <title>Innsbruck Trail Running Events & Community | DNA Trails</title> 
-
+<!-- Fallback favicon -->
+     <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Light mode favicon -->
 <link rel="icon" href="favicon-light.ico" media="(prefers-color-scheme: light)" type="image/png">
 
