--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Who We Are | DNA Trails - Innsbruck Trail Running</title>
+<!-- Fallback favicon -->
+     <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Light mode favicon -->
 <link rel="icon" href="favicon-light.ico" media="(prefers-color-scheme: light)" type="image/png">
 
@@ -13,12 +15,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- Flowbite core styles (alleen nodig als je die nog niet hebt) -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 
 <script data-goatcounter="https://dnatrails.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 
+                        <script src="/scripts/whatsapp-protection.js"></script>
 
 <!-- Flowbite script (maakt toggle-buttons werkend) -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
@@ -102,12 +106,143 @@
     </header>
 
 <section class="bg-white dark:bg-gray-900 mt-16"> 
-    <div class="py-8 px-4 mx-auto max-w-screen-md text-center lg:py-16 lg:px-12">
+  <main class="max-w-screen-md mx-auto px-4 py-16">
+    <h1 class="text-4xl font-extrabold mb-6 text-gray-900 dark:text-white">Why DNA Trails?</h1>
+<p class="mb-6 text-lg">
+DNA Trails started in May 2023 with a small group of Dutch and German expats who deeply valued the power of sport to bring people together. We knew firsthand how much sport had helped us connect after moving to Innsbruck — and we noticed that while the city had athletes everywhere, there weren’t many accessible sport communities yet, especially not for trail running.
+</p>
 
-        <svg class="mx-auto mb-4 w-10 h-10 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M331.8 224.1c28.29 0 54.88 10.99 74.86 30.97l19.59 19.59c40.01-17.74 71.25-53.3 81.62-96.65c5.725-23.92 5.34-47.08 .2148-68.4c-2.613-10.88-16.43-14.51-24.34-6.604l-68.9 68.9h-75.6V97.2l68.9-68.9c7.912-7.912 4.275-21.73-6.604-24.34c-21.32-5.125-44.48-5.51-68.4 .2148c-55.3 13.23-98.39 60.22-107.2 116.4C224.5 128.9 224.2 137 224.3 145l82.78 82.86C315.2 225.1 323.5 224.1 331.8 224.1zM384 278.6c-23.16-23.16-57.57-27.57-85.39-13.9L191.1 158L191.1 95.99l-127.1-95.99L0 63.1l96 127.1l62.04 .0077l106.7 106.6c-13.67 27.82-9.251 62.23 13.91 85.39l117 117.1c14.62 14.5 38.21 14.5 52.71-.0016l52.75-52.75c14.5-14.5 14.5-38.08-.0016-52.71L384 278.6zM227.9 307L168.7 247.9l-148.9 148.9c-26.37 26.37-26.37 69.08 0 95.45C32.96 505.4 50.21 512 67.5 512s34.54-6.592 47.72-19.78l119.1-119.1C225.5 352.3 222.6 329.4 227.9 307zM64 472c-13.25 0-24-10.75-24-24c0-13.26 10.75-24 24-24S88 434.7 88 448C88 461.3 77.25 472 64 472z"/></svg>
-        <h1 class="mb-4 text-4xl font-bold tracking-tight leading-none text-gray-900 lg:mb-6 md:text-5xl xl:text-6xl dark:text-white">Coming soon</h1>
-        <p class="font-light text-gray-500 md:text-lg xl:text-xl dark:text-gray-400"> </p>
+<p class="mb-10 text-lg">
+What began as a few casual Thursday runs quickly grew. After we started posting on Instagram in the summer of 2023, more and more people joined — sometimes we had over 50 runners showing up. The name DNA Trails reflects what we believe: that the urge to run in the mountains lives in our DNA, and that DNA connects us all.
+</p>
+<h2 class="text-3xl font-bold mb-4 text-gray-900 dark:text-white">What we believe in</h2>
+<p class="mb-6 text-lg">
+At the heart of DNA Trails is a simple idea: trail running should be welcoming, free, and fun. We believe a strong community doesn’t require sign-up forms, club fees, or performance goals — just open trails, kind people, and shared footsteps.
+</p>
+
+<ul class="list-disc pl-5 space-y-2 mb-10">
+  <li><strong>Free & inclusive</strong> — Always free, and everyone is welcome.</li>
+  <li><strong>Bilingual by default</strong> — English is our shared language to include everyone.</li>
+  <li><strong>Leave no one behind</strong> — We always run in groups and make sure nobody is alone.</li>
+  <li><strong>No pressure</strong> — Skip a week. Join last-minute. Show up and smile.</li>
+</ul>
+
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-10">
+      <img src="assets/img/imgesprach.jpg" alt="Runners chatting" class="rounded-lg shadow">
+      <img src="assets/img/DachterassenView.jpg" alt="Runners after run" class="rounded-lg shadow">
     </div>
+
+    <h2 class="text-3xl font-bold mb-4 text-gray-900 dark:text-white">Want to help shape the future?</h2>
+    <p class="mb-6 text-lg">Our community is run by volunteers. We welcome new guides, ideas for workshops, co-hosts for events, or even fun Instagram takeovers. If you’d like to contribute — big or small — we’d love to hear from you.</p>
+    <a href="contact.html" class="inline-block bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg shadow hover:bg-blue-700 transition">Contact Us</a>
+  </main>
 </section>
 </body>
+
+
+<footer class="bg-white dark:bg-gray-900">
+    <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+        <div class="md:flex md:justify-between">
+          <div class="mb-6 md:mb-0">
+<a href="https://www.instagram.com/dna.trails/" class="flex items-center">
+  <img src="assets/logos/dna-trails-logo-black.png" alt="DNA Trails Logo" class="h-8 me-2" loading="lazy">
+  <span class="text-2xl tracking-tight font-extrabold text-gray-900 dark:text-white leading-tight mt-0.5">DNA Trails</span>
+</a>
+
+          </div>
+          <!-- <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources</h2>
+                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                      <li class="mb-4">
+                          <a href="https://www.instagram.com/dna.trails/" class="hover:underline">Flowbite</a>
+                      </li>
+                      <li>
+                          <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
+                      </li>
+                  </ul>
+              </div>
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Follow us</h2>
+                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                      <li class="mb-4">
+                          <a href="https://www.instagram.com/dna.trails/" class="hover:underline ">Github</a>
+                      </li>
+                      <li>
+                          <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Discord</a>
+                      </li>
+                  </ul>
+              </div>
+              <div>
+                  <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
+                  <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                      <li class="mb-4">
+                          <a href="#" class="hover:underline">Privacy Policy</a>
+                      </li>
+                      <li>
+                          <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                      </li>
+                  </ul>
+              </div>
+          </div> -->
+      </div>
+      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+      <div class="sm:flex sm:items-center sm:justify-between">
+          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://www.instagram.com/dna.trails/" class="hover:underline">DNA Trails</a>. All Rights Reserved.
+          </span>
+          <div class="flex mt-4 sm:justify-center sm:mt-0">
+
+<a href="https://strava.app.link/LBVDAzxYnUb" target="_blank" class="mr-4">
+  <i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i>
+</a>
+
+
+<a href="https://www.instagram.com/dna.trails/" target="_blank">
+  <i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i>
+</a>
+
+
+<a href="#" id="initialWhatsappTrigger" class="inline-block ml-4" title="Click to enter the WhatsApp Announcement Channel">
+    <i class="fab fa-whatsapp text-2xl text-pink-500 hover:text-pink-600 transition-colors duration-200"></i>
+</a>
+
+<div     id="whatsappSecurityModal" class="hidden mt-4 p-4 border border-gray-300 rounded-lg shadow-md bg-white mx-auto max-w-sm" >
+    <div class="flex justify-between items-center mb-3">
+        <p class="text-lg font-semibold">To confirm you're a runner and not a robot, please answer the following question:</p>
+        <button id="closeWhatsappModal" class="text-gray-500 hover:text-gray-700 text-xl font-bold">&times;</button>
+    </div>
+
+
+    
+    <p class="mb-4 text-md">How much is 25 minus 15? Enter your answer in numbers.</p>
+    
+    <div class="flex items-center space-x-2">
+        <input 
+            type="text" 
+            id="whatsappAnswerInput" 
+            placeholder="Your answer" 
+            class="p-2 border border-gray-300 rounded-md focus:ring-pink-500 focus:border-pink-500 flex-grow"
+        >
+        <button 
+            id="revealWhatsappLinkBtn" 
+            class="px-4 py-2 bg-pink-500 text-white font-semibold rounded-md hover:bg-pink-600 transition-colors duration-200"
+        >
+            Show Link
+        </button>
+    </div>
+
+    <div id="whatsappActualLinkDisplay" class="mt-4 hidden">
+        <a href="#" id="whatsappFinalLink" target="_blank" rel="noopener noreferrer" title="Ga naar WhatsApp groep">
+            <i class="fab fa-whatsapp text-4xl text-pink-500 hover:text-pink-600 transition-colors duration-200"></i>
+            <span class="ml-2 text-pink-500 hover:text-pink-600 text-lg font-medium">Click here to enter the group.</span>
+        </a>
+    </div>
+</div>
+
+
+          </div>
+      </div>
+    </div>
+</footer>
 </html>
