new crew member added + meta descriptions

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Who We Are | DNA Trails - Innsbruck Trail Running</title>
+         <meta name="description" content="Learn the story behind DNA Trails and the passion that drives our free trail running community in Innsbruck.">
+
 <!-- Fallback favicon -->
      <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Light mode favicon -->
