--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Innsbruck Trail Running Events Calendar 2025 | DNA Trails</title>
+<meta name="description" content="View the full calendar of upcoming runs and special events with the DNA Trails community. Find dates, times, and details for our next weekly run or trail adventure.">
 <!-- Light mode favicon -->
 <link rel="icon" href="favicon-light.ico" media="(prefers-color-scheme: light)" type="image/png">
 
