--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
      <title>Innsbruck Trail Running Events & Community | DNA Trails</title> 
+     <meta name="description" content="Looking for an Innsbruck run club? Join DNA Trails for free weekly trail runs and events! Our community welcomes all levels to explore the mountains around Innsbruck together.">
 <!-- Fallback favicon -->
      <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Light mode favicon -->
@@ -17,11 +18,11 @@
 
 
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+
   <!-- Flowbite core styles (alleen nodig als je die nog niet hebt) -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+<link rel="stylesheet" href="style.css">
 <!-- Analytics -->
 <script data-goatcounter="https://dnatrails.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
@@ -210,126 +211,101 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 </section>
 
 <section class="bg-white dark:bg-gray-900">
-  <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 ">
-      <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
-          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Meet our Team</h2>
-          <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">Meet the local runners who guide our community on the trails.</p>
-      </div> 
-      <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
-          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-              <a href="#">
-                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="assets/img/allard-sym-square.jpg" alt="Allard Sym Avatar" loading="lazy">
-              </a>
-              <div class="p-5">
-                  <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                      <a href="#"><span class="text-2xl mr-4">🇳🇱</span>Allard Sym</a>
-                  </h3>
-                  <span class="text-gray-500 dark:text-gray-400">Founder</span>
-                  <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">When Allard Sym isn't running with DNA Trails, he's training for world cups in ski mountaineering, trail, and skyrunning—representing the Netherlands on the international stage.</p>
-                  <ul class="flex space-x-4 sm:mt-0">
-                      <li>
+  <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+    <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
+      <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Meet our Team</h2>
+      <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">
+        Meet the local runners who guide our community on the trails.
+      </p>
+    </div>
 
-<a href="https://www.strava.com/athletes/9050101?oq=alla" target="_blank">
-  <i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
+    <!-- 2 kolommen vanaf md voor de kaarten -->
+    <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
 
+      <!-- Card -->
+      <article class="flex rounded-lg shadow bg-gray-50 dark:bg-gray-800 overflow-hidden">
+        <div class="team-pic">
+          <img src="assets/img/allard-sym-square.jpg" alt="Allard Sym Avatar" loading="lazy">
+        </div>
+        <div class="p-5">
+          <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+            <a href="#"><span class="text-2xl mr-3">🇳🇱</span>Allard Sym</a>
+          </h3>
+          <span class="text-gray-500 dark:text-gray-400">Founder</span>
+          <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
+            When Allard Sym isn't running with DNA Trails, he's training for world cups in ski mountaineering, trail, and skyrunning—representing the Netherlands on the international stage.
+          </p>
+          <ul class="flex space-x-4">
+            <li><a href="https://www.strava.com/athletes/9050101?oq=alla" target="_blank" aria-label="Allard on Strava"><i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+            <li><a href="https://www.instagram.com/a.s.sprenger?igsh=eG45MXluajZjcHd4" target="_blank" aria-label="Allard on Instagram"><i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/allard-sym-sprenger" target="_blank" aria-label="Allard on LinkedIn"><i class="fab fa-linkedin text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+          </ul>
+        </div>
+      </article>
 
-                      </li>
-                      <li>
+      <!-- Card -->
+      <article class="flex rounded-lg shadow bg-gray-50 dark:bg-gray-800 overflow-hidden">
+        <div class="team-pic">
+          <img src="assets/img/bente-square.jpg" alt="Bente Avatar" loading="lazy">
+        </div>
+        <div class="p-5">
+          <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+            <a href="#"><span class="text-2xl mr-3">🇳🇱</span>Bente</a>
+          </h3>
+          <span class="text-gray-500 dark:text-gray-400">Founder</span>
+          <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
+            When she’s not injured (which is rare), she leads the Discovery Run. Off the trails, you'll catch her grinding sketchy gravel on her road bike.
+          </p>
+          <ul class="flex space-x-4">
+            <li><a href="https://www.strava.com/athletes/38314132" target="_blank" aria-label="Bente on Strava"><i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+            <li><a href="https://www.instagram.com/cestlafiets?igsh=OTJncGtlYWpza3Vj&utm_source=qr" target="_blank" aria-label="Bente on Instagram"><i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+            <li><a href="https://at.linkedin.com/in/bentetheeuwes" target="_blank" aria-label="Bente on LinkedIn"><i class="fab fa-linkedin text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+          </ul>
+        </div>
+      </article>
 
-<a href="https://www.instagram.com/a.s.sprenger?igsh=eG45MXluajZjcHd4" target="_blank">
-  <i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-                      </li>
+      <!-- Card -->
+      <article class="flex rounded-lg shadow bg-gray-50 dark:bg-gray-800 overflow-hidden">
+        <div class="team-pic">
+          <img src="assets/img/andi-square.png" alt="Andreas Avatar" loading="lazy">
+        </div>
+        <div class="p-5">
+          <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+            <a href="#"><span class="text-2xl mr-3">🇩🇪</span>Andreas</a>
+          </h3>
+          <span class="text-gray-500 dark:text-gray-400">Guide</span>
+          <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
+            Our resident student—and yes, a German, but fluent in Dutch! Currently recovering from a broken leg, yet always the one to lift the group's spirits.
+          </p>
+          <ul class="flex space-x-4">
+            <li><a href="https://www.strava.com/athletes/43287704?oq=andre" target="_blank" aria-label="Andreas on Strava"><i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+            <li><a href="https://www.instagram.com/andreasrosenecker" target="_blank" aria-label="Andreas on Instagram"><i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+          </ul>
+        </div>
+      </article>
 
-                                            <li>
-<a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQH8k2tJ19XRxgAAAZe25MNYXx5J0t4dWnBAj4j68gfAUnEJL4Rsqakq1HRYKC3NWAnxFQyrTJkW91rxOznAudxzOhmy8ZIsgAmE7QzwaUdYd9320zopn0YCjRo9aP78XEJpZ8s=&original_referer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fallard-sym-sprenger" target="_blank">
-  <i class="fab fa-linkedin text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-                      </li>
-                  </ul>
-              </div>
-          </div> 
-          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-              <a href="#">
-                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src=assets/img/bente-square.jpg alt="Bente Avatar" loading="lazy">
-              </a>
-              <div class="p-5">
-                  <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                      <a href="#"><span class="text-2xl mr-4">🇳🇱</span>Bente</a>
-                  </h3>
-                  <span class="text-gray-500 dark:text-gray-400">Founder</span>
-                  <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">When she’s not injured (which is rare), she leads the Discovery Run. Off the trails, you'll catch her grinding sketchy gravel on her road bike.</p>
-                  <ul class="flex space-x-4 sm:mt-0">
-                    <li>
+      <!-- Card -->
+      <article class="flex rounded-lg shadow bg-gray-50 dark:bg-gray-800 overflow-hidden">
+        <div class="team-pic">
+          <img src="assets/img/felix-square.jpg" alt="Felix Avatar" loading="lazy">
+        </div>
+        <div class="p-5">
+          <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+            <a href="#"><span class="text-2xl mr-3">🇩🇪</span>Felix</a>
+          </h3>
+          <span class="text-gray-500 dark:text-gray-400">Guide</span>
+          <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
+            Felix mostly guides chatty discovery runs and is always curious about ideas for the next adventure - be it bikepacking, a trail ultra, or skitouring.
+          </p>
+          <ul class="flex space-x-4">
+            <li><a href="https://strava.app.link/czQ4o2hPBWb" target="_blank" aria-label="Felix on Strava"><i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+          </ul>
+        </div>
+      </article>
 
-<a href="https://www.strava.com/athletes/38314132" target="_blank">
-  <i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-
-
-                      </li>
-                      <li>
-
-<a href="https://www.instagram.com/cestlafiets?igsh=OTJncGtlYWpza3Vj&utm_source=qr" target="_blank">
-  <i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-                      </li>
-
-                      <!-- <li>
-<a href="https://www.instagram.com/dna.trails/" target="_blank">
-  <i class="fas fa-globe text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-                      </li> -->
-                                            <li>
-<a href="https://at.linkedin.com/in/bentetheeuwes" target="_blank">
-  <i class="fab fa-linkedin text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-                      </li>
-                  </ul>
-              </div>
-          </div> 
-          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-              <a href="#">
-                  <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="assets/img/andi-square.png" alt="Andi Avatar" loading="lazy">
-              </a>
-              <div class="p-5">
-                  <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                      <a href="#"><span class="text-2xl mr-4">🇩🇪</span>Andreas</a>
-                  </h3>
-                  <span class="text-gray-500 dark:text-gray-400">Guide</span>
-                  <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Our resident student—and yes, a German, but fluent in Dutch! Currently recovering from a broken leg, yet always the one to lift the group's spirits.</p>
-                  <ul class="flex space-x-4 sm:mt-0">
-                             <li>
-
-<a href="https://www.strava.com/athletes/43287704?oq=andre" target="_blank">
-  <i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-
-
-                      </li>
-                      <li>
-
-<a href="https://www.instagram.com/andreasrosenecker" target="_blank">
-  <i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-                      </li>
-
-                      <!-- <li>
-<a href="https://www.instagram.com/dna.trails/" target="_blank">
-  <i class="fas fa-globe text-2xl text-pink-500 hover:text-pink-600"></i>
-</a>
-                      </li> -->
-                  </ul>
-              </div>
- 
-      </div>  
+    </div>
   </div>
 </section>
-
-
-
-
 
 
 <!-- Modal -->
@@ -447,6 +423,9 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
         <li class="mb-1">Specialized <span class="font-bold">courses</span> such as avalanche safety and cross-country skiing, perfect for mountain enthusiasts in Innsbruck.</li>
         <li class="mb-1">Additional <span class="font-bold">community runs</span> on weekends and other weekdays, sometimes even bike rides for cross-training.</li>
         <li class="mb-1"><span class="font-bold">Social events</span> like Christmas get-togethers or post-run drinks, fostering our strong community spirit.</li>
+        <li class="mb-1">
+  <span class="font-bold">Specific routes</span>, created and shared by the community in and around Innsbruck. You can find them <a href="routes.html" class="text-blue-600 hover:underline dark:text-blue-500">here</a>.
+</li>
     </ul>
     <p class="text-gray-500 dark:text-gray-400 mt-4">We also have a separate <span class="font-bold">WhatsApp Group Chat</span> for members to spontaneously meet up for runs or other activities throughout the week, beyond the official schedule. Be sure to keep an eye on our <a href="events.html" class="text-blue-600 hover:underline dark:text-blue-500">Events page</a> and <span class="font-bold">WhatsApp Announcement Channel</span> for all these special happenings!</p>
 </div>
