--- a/routes.html
+++ b/routes.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Trail Running Routes • DNA Trails Innsbruck</title>
+<meta name="description" content="Explore trail running routes around Innsbruck with DNA Trails. Find downloadable GPX files, route maps, and descriptions given directly by local runners.">
+
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -14,7 +16,9 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 
-
+<!-- Analytics -->
+<script data-goatcounter="https://dnatrails.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 
 <!-- Leaflet GPX plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.5.1/gpx.min.js"></script>
