--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Connect with DNA Trails | Innsbruck Trail Running Contact</title>
+<meta name="description" content="Have a question about our weekly runs, special events, or just want to say hello? Get in touch with the DNA Trails team through our contact form or social media.">
 <!-- Light mode favicon -->
 <link rel="icon" href="favicon-light.ico" media="(prefers-color-scheme: light)" type="image/png">
 
