--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <!-- Dark mode favicon -->
 <link rel="icon" href="favicon-dark.ico" media="(prefers-color-scheme: dark)" type="image/png">
 
+<!-- Preload the first pic -->
+<link rel="preload" as="image" href="assets/img/IMG_4711.jpg">
+
 
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
@@ -27,16 +30,14 @@
 <script data-goatcounter="https://dnatrails.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 
-<!-- Flowbite script (maakt toggle-buttons werkend) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
-    <script src=" https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.17/index.global.min.js "></script>
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-    <script src="/scripts/csvToData.js"></script>
-    <script src="/scripts/calendar.js"></script>
-    <script src="/scripts/navbar.js"></script>
-        <script src="/scripts/cards.js"></script>
-                <script src="/scripts/whatsapp-protection.js"></script>
+<!-- Scripts (with defer) -->
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+<script defer src="/scripts/csvToData.js"></script>
+<script defer src="/scripts/calendar.js"></script>
+<script defer src="/scripts/navbar.js"></script>
+<script defer src="/scripts/cards.js"></script>
+<script defer src="/scripts/whatsapp-protection.js"></script>
+
   </head>
 <body>
  <header>
@@ -154,8 +155,18 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 </p>
         </div>
         <div class="grid grid-cols-2 gap-4 mt-8">
-            <img class="w-full rounded-lg" src="assets/img/PXL_20241109_090337105.jpg" alt="a group of trail runners in innsbruck area" loading="lazy">
-            <img class="mt-4 w-full lg:mt-10 rounded-lg" src="assets/img/PXL_20230830_091554949.jpg" alt="people trail running in innsbruck" loading="lazy">
+            <img
+  src="assets/img/PXL_20241109_090337105.jpg"
+  alt="a group of trail runners in innsbruck area"
+  width="1600" height="1067"   
+  loading="lazy" decoding="async"
+  class="w-full rounded-lg">
+            <img
+  src="assets/img/PXL_20230830_091554949.jpg"
+  alt="people trail running in innsbruck"
+  width="1600" height="1067"
+  loading="lazy" decoding="async"
+  class="mt-4 w-full lg:mt-10 rounded-lg">
         </div>
     </div>
 </section>
@@ -184,7 +195,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
     </div>
 </section>
 
-<section id="event-cards" data-organizer="DNA Trails" class="mb-10 md:mb-16 bg-white p-8 rounded-lg">
+<section id="event-cards" class="mb-10 md:mb-16 bg-white p-8 rounded-lg">
     <div class="mx-auto max-w-screen-xl px-4 lg:px-6">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white text-center">Upcoming Events</h2>
         <div id="cardsContainer" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
@@ -323,16 +334,14 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
   </div>
 </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
-  <script src="/scripts/csvToData.js"></script>
-  <script src="/scripts/calendar.js"></script>
+
 
 
       <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Curious what it's like?</h2>
           <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400"> Let the photos do the talking 😉</p>
       </div> 
-<div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+<div class="gallery grid grid-cols-2 md:grid-cols-4 gap-4">
     
     <div class="grid gap-4">
         <div>
