http to https links internally

--- a/pages/communities/community-placeholder.html
+++ b/pages/communities/community-placeholder.html
@@ -29,7 +29,7 @@
         <div class="relative group">
           <button class="text-gray-700 hover:text-blue-600 inline-flex items-center" id="communities-dropdown-button" aria-expanded="false" aria-haspopup="true">
             Communities
-            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
             </svg>
           </button>
@@ -64,7 +64,7 @@
   <div class="relative">
     <button class="block w-full text-left text-gray-700 hover:text-blue-600 py-2 pl-4 pr-3" id="mobile-communities-dropdown-button" aria-expanded="false" aria-haspopup="true">
       Communities
-      <svg class="ml-1 w-4 h-4 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <svg class="ml-1 w-4 h-4 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
       </svg>
     </button>
@@ -82,7 +82,7 @@
 
             <section class="text-center mb-10 md:mb-16">
                 <div class="w-24 h-24 mx-auto mb-4 bg-white rounded-full flex items-center justify-center shadow-lg">
-                    <svg class="w-16 h-16 text-blue-600" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="w-16 h-16 text-blue-600" fill="currentColor" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
                         <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2h1v1.93c-.35.04-.7-.04-1-.07zM18.93 11C18.73 15.64 15.17 19.4 10.5 19.93V18h-1c-.55 0-1-.45-1-1v-4l6.45-6.45C17.75 9.3 18.71 10.63 18.93 11zM12 4.07V6h1c.55 0 1 .45 1 1v4l-6.45 6.45C6.25 14.7 5.29 13.37 5.07 12c.2-4.64 3.76-8.4 8.43-8.93z"></path>
                     </svg>
                     </div>
@@ -167,7 +167,7 @@ Another section                        </p>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <a href="communities/cycling.html" class="block bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 text-center">
                         <div class="w-16 h-16 mx-auto mb-3 bg-white rounded-full flex items-center justify-center border border-gray-200">
-                             <svg class="w-10 h-10 text-green-600" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 18H5c-1.1 0-1.99.9-1.99 2S3.9 22 5 22h14c1.1 0 2-.9 2-2s-.9-2-2-2zm-1-9c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-2.71 4H8.71l-.7-.7C7.62 11.5 6.8 11 6 11c-.55 0-1 .45-1 1s.45 1 1 1h.78c.67 0 1.25.35 1.57.88l1.45 2.52h5.81l1.45-2.52c.32-.53.9-0.88 1.57-0.88H18c.55 0 1-.45 1-1s-.45-1-1-1c-.8 0-1.62.5-2.09 1.3L15.29 13H8.71L7.91 11.7C7.4 10.87 6.6 10.33 5.71 10H5c-1.1 0-2 .9-2 2s.9 2 2 2h.78l1.45 2.52H15.77l1.45-2.52H19c1.1 0 2-.9 2-2s-.9-2-2-2h-1c-.8 0-1.62.5-2.09 1.3L15.29 13zm-3.29-4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-5 0c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z"/></svg>
+                             <svg class="w-10 h-10 text-green-600" fill="currentColor" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg"><path d="M19 18H5c-1.1 0-1.99.9-1.99 2S3.9 22 5 22h14c1.1 0 2-.9 2-2s-.9-2-2-2zm-1-9c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-2.71 4H8.71l-.7-.7C7.62 11.5 6.8 11 6 11c-.55 0-1 .45-1 1s.45 1 1 1h.78c.67 0 1.25.35 1.57.88l1.45 2.52h5.81l1.45-2.52c.32-.53.9-0.88 1.57-0.88H18c.55 0 1-.45 1-1s-.45-1-1-1c-.8 0-1.62.5-2.09 1.3L15.29 13H8.71L7.91 11.7C7.4 10.87 6.6 10.33 5.71 10H5c-1.1 0-2 .9-2 2s.9 2 2 2h.78l1.45 2.52H15.77l1.45-2.52H19c1.1 0 2-.9 2-2s-.9-2-2-2h-1c-.8 0-1.62.5-2.09 1.3L15.29 13zm-3.29-4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-5 0c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z"/></svg>
                         </div>
                         <h3 class="text-xl font-semibold text-gray-900 mt-2">Cycling Innsbruck</h3>
                         <p class="text-gray-600 text-sm">Verbinden van fietsliefhebbers voor tochten en races.</p>
