--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </a>
     <button data-collapse-toggle="mega-menu-full" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mega-menu-full" aria-expanded="false">
       <span class="sr-only">Open main menu</span>
-      <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+      <svg class="w-5 h-5" aria-hidden="true" xmlns="https://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
       </svg>
     </button>
@@ -65,7 +65,7 @@
         <!-- <li>
           <button id="mega-menu-full-dropdown-button" data-collapse-toggle="mega-menu-full-dropdown" type="button" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded-sm md:w-auto hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent">
             Other Events
-            <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+            <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="https://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
             </svg>
           </button>
@@ -400,7 +400,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
           <div>
                  <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         Who can join the community runs?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">Our community is open and <span class="font-bold">free to everyone</span>! Whether you're a complete beginner looking to try trail running, an experienced runner seeking motivation, or someone who simply enjoys the mountains and company, you're welcome. We prioritize fun and support over speed.</p>
@@ -408,7 +408,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         How fit do I need to be?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">There's no minimum fitness level! The goal is to enjoy the trails, the views around Innsbruck, and the company. We always ensure <span class="font-bold">no one gets left behind</span> and adjust to the group's needs. We also have two groups with different paces.</p>
@@ -416,14 +416,14 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         How long are the community runs?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">We typically run in <span class="font-bold">two groups</span>: the <span class="font-bold">discovery trail</span>, usually a loop of around <span class="font-bold">8km with 250m D+</span>, and the <span class="font-bold">advanced trail</span>, typically around <span class="font-bold">12km with 400m D+</span>. Run durations vary by pace, but plan for 1.5 to 2.5 hours.</p>
                 </div>
 <div class="mb-10">
     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
         Besides the Thursday community run, what else does the community offer?
     </h3>
     <p class="text-gray-500 dark:text-gray-400">Our community offers much more than just our weekly Thursday runs! We regularly organize various events and activities, including:</p>
@@ -443,7 +443,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
             <div>
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         Do I need to sign up or register for the runs?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">No, you can <span class="font-bold">just show up - no registration needed!</span> If it's your first time running with us, we'd appreciate it if you come a little bit earlier to say hi so we can welcome you properly.</p>
@@ -451,7 +451,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         What gear do I need for a community run?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">Your <span class="font-bold">trail running shoes</span> are the most important piece of gear. We even provide a limited set of shoes for those who don't have trail shoes yet and want to try them out! We also recommend a trail running backpack with some water, a light jacket, and a snack, but that's up to you.</p>
@@ -459,7 +459,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         How do I find out about upcoming runs and events?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">All our upcoming community runs, workshops, and special events are listed on our <a href="events.html" class="text-blue-600 hover:underline dark:text-blue-500">Events page</a>. We highly recommend joining our <span class="font-bold">WhatsApp Announcement Channel</span>, as we always post the fastest and most accurate updates there.</p>
@@ -467,7 +467,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
-                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
+                        <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 100-2 1 1 0 000 2zm-3 8a1 1 0 100-2 1 1 0 000 2zm6 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         I'd like to contribute to the community. How can I help?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">That's great! We're always happy to have people help lead the groups on Thursdays, as well as support other initiatives like organizing a (weekend) event, workshop, or lecture. In the past, people have provided strength training sessions, nutrition workshops, and even organized casual races. Please reach out to us by filling out the <a href="contact.html" class="text-blue-600 hover:underline dark:text-blue-500">contact form</a> or by sending us a message on WhatsApp.</p>
