--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
 
 <!-- Scripts (with defer) -->
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
-<script defer src="/scripts/csvToData.js"></script>
-<script defer src="/scripts/calendar.js"></script>
+<script defer src="/scripts/calendar-new.js"></script>
 <script defer src="/scripts/cards.js"></script>
 <script defer src="/scripts/whatsapp-protection.js"></script>
-<script src="/scripts/navbar.js"></script>
 
   </head>
 <body>
@@ -222,7 +220,7 @@
             </p>
 
 <a
-  href="events.html"
+  href="calendar/index.html"
   class="inline-flex items-center justify-center px-8 py-3 text-lg font-bold text-white bg-gradient-to-br from-sky-400 to-emerald-600 rounded-full shadow-lg hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-sky-200 transition duration-300 ease-in-out transform hover:scale-105 active:scale-95 text-center"
 >
   Explore Upcoming Runs
@@ -681,7 +679,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
       </div>
 </div>
 </footer>
-
+<script src="/scripts/navbar.js"></script>
 </body>
 
 </html>
